added/changed tests